--- a/market/templates/market/base.html
+++ b/market/templates/market/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <html>
     <head>
-        <title>Roland Machikoro blog</title>
+        <title>Wetentio</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="{% static 'css/market.css' %}">
@@ -11,7 +11,7 @@
     <body>
     <div class="page-header">
     	{% if user.is_authenticated %}
-    	<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+    	<a href="{% url 'market_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 		{% endif %}
         <h1><a href="/">Wetentio - everyone is a researcher </a></h1>
     </div>
