--- a/market/templates/market/market_detail.html
+++ b/market/templates/market/market_detail.html
@@ -8,7 +8,7 @@
             </div>
         {% endif %}
         <h1>{{ researchrequest.title }}</h1>
-        <p>Min= {{ researchrequest.min_par_nr }} </p>
+        <p>Min= {{ researchrequest.min_part_nr }} </p>
         <p>Max= {{ researchrequest.max_part_nr }} </p>
         <p>{{ researchrequest.hypo|linebreaksbr }}</p>
     </div>
