--- a/market/templates/market/base.html
+++ b/market/templates/market/base.html
@@ -12,8 +12,11 @@
     <div class="page-header">
     	{% if user.is_authenticated %}
     	<a href="{% url 'market_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+		<a href="{% url 'logout' %}" class="top-menu">logout {{ user.get_username }}</a>
+		{% else %}
+		<a href="{% url 'login' %}" class="top-menu">Login </a>
 		{% endif %}
-        <h1><a href="/">Wetentio - everyone is a researcher </a></h1>
+        <h1><a href="/">Wetentio </a></h1>
     </div>
     <div class="content container">
         <div class="row">
