--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <html>
     <head>
-        <title>Wetentio</title>
+        <title>Rolands Django Projecten</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="{% static 'css/market.css' %}">
@@ -11,18 +11,14 @@
     <body>
     <div class="page-header">
     	{% if user.is_authenticated %}
-    	<a href="{% url 'market_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 		<a href="{% url 'logout' %}" class="top-menu">logout {{ user.get_username }}</a>
 		{% else %}
 		<a href="{% url 'login' %}" class="top-menu">Login </a>
 		{% endif %}
-        <h1><a href="/">Wetentio </a></h1>
+        <h1><a href="/">Rolands Django Projecten</a></h1>
     </div>
     <div class="content container">
         <div class="row">
-        	<div class="col-md-8">
-        	<a href="{% url 'market_list' %}"> Show market list </a>
-            </div>
             <div class="col-md-8">
             {% block content %}
             {% endblock %}
