--- a/iot/templates/iot/base.html
+++ b/iot/templates/iot/base.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}
 <html>
     <head>
-        <title>Wetentio</title>
+        <title>Roland Health Hub</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="{% static 'css/market.css' %}">
@@ -11,27 +11,21 @@
     <body>
     <div class="page-header">
     	{% if user.is_authenticated %}
-    	<a href="{% url 'market_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 		<a href="{% url 'logout' %}" class="top-menu">logout {{ user.get_username }}</a>
 		{% else %}
 		<a href="{% url 'login' %}" class="top-menu">Login </a>
 		{% endif %}
-        <h1><a href="/">Wetentio </a></h1>
+        <h1><a href="/">Roland Health Hub</a></h1>
     </div>
     <div class="content container">
         <div class="row">
-        	<div class="col-md-4">
-        		{% if user.is_authenticated %}
-            	<p><a href="{% url 'betablock' %}" > BetaBlock </a></p>
-				<p><a href="{% url 'feet' %}" > Feet </a></p>
-				<p><a href="{% url 'yoga' %}"> Yoga </a></p>
-				{% endif %}
-			</div>
-            <div class="col-md-8">
+        	{% if not user.is_authenticated %}
+        	<p> You need to login to see more information </p>
+        	 {% endif %}
             {% block content %}
             {% endblock %}
-            </div>
-            
+           
+           
         </div>
     </div>
 </body>
