--- a/market/templates/market/add_participant.html
+++ b/market/templates/market/add_participant.html
@@ -1,4 +1,4 @@
-{% extends 'market/base.html' %}
+{% extends 'base/base.html' %}
 
 {% block content %}
     <h1>Add new participant for {{ researchrequest.title }}</h1>
